tests/snapshots/codegen_codama__codama_config_serializes_stable_js_client_script.snap
---
source: tests/codegen_codama.rs
assertion_line: 13
expression: value
---
{
  "before": [],
  "idl": "target/idl/demo_app.json",
  "scripts": {
    "js": {
      "args": [
        "clients/js/src/generated"
      ],
      "from": "@codama/renderers-js"
    }
  }
}
