tests/snapshots/codegen_codama__write_codama_config_is_idempotent.snap
---
source: tests/codegen_codama.rs
assertion_line: 31
expression: content
---
{
  "idl": "target/idl/demo_app.json",
  "before": [],
  "scripts": {
    "js": {
      "from": "@codama/renderers-js",
      "args": [
        "clients/js/src/generated"
      ]
    }
  }
}
