tests/snapshots/codegen_codama__write_codama_config_rejects_missing_workspace_directory.snap
---
source: tests/codegen_codama.rs
assertion_line: 45
expression: rendered
---
I/O error at <workspace>/codama.json: workspace directory does not exist
